add more entities, adjust project structure and add map struct converters
