# src/main/kotlin/com/htwk/musikdatenbank/label/LabelController.kt
@@ -1,7 +1,0 @@
-package com.htwk.musikdatenbank.label
-
-import org.springframework.web.bind.annotation.RestController
-
-@RestController
-class LabelController() {
-}
